--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Gayme</title>
   <link rel="stylesheet" href="style.css">
-  <script src="keyboarder.js" defer></script>
+  <!-- <script src="keyboarder.js" defer></script> -->
   <script src="games.js" defer></script>
 </head>
 <body>
